--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>html5 game new</title>
+        <title>FlapplyRemake</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -24,8 +24,10 @@
         <![endif]-->
 
         <div class="GameCanvas">
-            <div class="Player"></div>
-            
+            <div class="Player">
+                <div class="Player--wings"></div>
+            </div>
+
             <div class="Scoreboard">
                 <button class="Scoreboard-restart">
                     <span class="Scoreboard-restartText">Restart</span>
