--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+    <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <title>FlapplyRemake</title>
@@ -19,9 +21,7 @@
         <!-- endbuild -->
     </head>
     <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <!--[if lt IE 10]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
 
         <div class="GameCanvas">
             <div class="Player">
@@ -33,6 +33,11 @@
                     <span class="Scoreboard-restartText">Restart</span>
                 </button>
             </div>
+        </div>
+        <div class="Controls">
+            <button class="zoomIn">+</button>
+            <button class="zoomOut">-</button>
+            <button class="zoomFit">Fit</button>
         </div>
 
         <!-- build:js scripts/vendor.js -->
@@ -48,5 +53,5 @@
         <script src="scripts/player.js"></script>
         <script src="scripts/utils.js"></script>
         <!-- endbuild -->
-</body>
+    </body>
 </html>
