--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,10 @@
         <!--[if lt IE 10]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
 
         <div class="GameCanvas">
-            <div class="Player">
+            <div class="Player Player--bottomCenter">
                 <div class="Player--wings"></div>
+            </div>
+            <div id="cloud-scroll">
             </div>
 
             <div class="Scoreboard">
