--- a/app/index.html
+++ b/app/index.html
@@ -24,17 +24,17 @@
         <!--[if lt IE 10]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
 
         <div class="GameCanvas">
-            <div class="Player Player--bottomCenter">
+            <div class="Player">
                 <div class="Player--wings"></div>
             </div>
-            <div id="cloud-scroll">
-            </div>
+            <div id="cloud-scroll"></div>
 
             <div class="Scoreboard">
                 <button class="Scoreboard-restart">
                     <span class="Scoreboard-restartText">Restart</span>
                 </button>
             </div>
+            <div class="Floor"></div>
         </div>
         <div class="Controls">
             <button class="zoomIn">+</button>
@@ -54,6 +54,7 @@
         <script src="scripts/game.js"></script>
         <script src="scripts/player.js"></script>
         <script src="scripts/utils.js"></script>
+        <script src="scripts/floor.js"></script>
         <!-- endbuild -->
     </body>
 </html>
