--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,8 @@
 
         <div class="GameCanvas">
             <div class="Player">
-                <div class="Player--wings"></div>
+                <img src="/images/bird.png" class="Player--bird"></img>
+                <img src="/images/birdwing.png" class="Player--wings"></img>
             </div>
             <div id="cloud-scroll"></div>
 
