--- a/app/index.html
+++ b/app/index.html
@@ -44,8 +44,7 @@
             <img src="/images/birdwing.png" class="Player--wings"></img>
         </div>
         <div id="cloud-scroll"></div>
-        <div class="Tube1"></div>
-        <div class="Tube2"></div>
+        <div class="Pipes"></div>
         <div class="Scoreboard">
             <button class="Scoreboard-restart">
                 <span class="Scoreboard-restartText">Restart</span>
@@ -75,7 +74,7 @@
     <script src="scripts/utils.js"></script>
     <script src="scripts/floor.js"></script>
     <script src="scripts/sound.js"></script>
-    <script src="scripts/tube.js"></script>
+    <script src="scripts/pipes.js"></script>
     <!-- endbuild -->
 </body>
 
