--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,16 @@
             <img src="/images/birdwing.png" class="Player--wings"></img>
         </div>
         <div id="cloud-scroll"></div>
+        <!--
         <div class="Pipes"></div>
+        -->
+        <div class="Pipedown1 Pipe"></div>
+        <div class="Pipeup1 Pipe"></div>
+        <div class="Pipedown2 Pipe"></div>
+        <div class="Pipeup2 Pipe"></div>
+        <div class="Pipedown3 Pipe"></div>
+        <div class="Pipeup3 Pipe"></div>
+
         <div class="Scoreboard">
             <button class="Scoreboard-restart">
                 <span class="Scoreboard-restartText">Restart</span>
@@ -72,8 +81,10 @@
     <script src="scripts/game.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/utils.js"></script>
+<!--
     <script src="scripts/floor.js"></script>
-    <script src="scripts/pipes.js"></script>
+-->
+    <script src="scripts/pipe.js"></script>
     <!-- endbuild -->
 </body>
 
