--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
             <img src="/images/bird.png" class="Player--bird"></img>
             <img src="/images/birdwing.png" class="Player--wings"></img>
         </div>
-        <div id="cloud-scroll"></div>
+        <div class="Clouds"></div>
         <!--
         <div class="Pipes"></div>
         -->
@@ -59,7 +59,7 @@
                 <span class="Scoreboard-restartText">Restart</span>
             </button>
         </div>
-        <div class="Floor"></div>
+        <div class="Ground"></div>
         <div class="sound"><img width="50px" onclick="window.Game.prototype.toggleSound()" src="images/sound.png" alt="" /></div>
         <div class="nosound" hidden><img width="50px" onclick="window.Game.prototype.toggleSound()" src="images/nosound.png" alt="" /></div>
     </div>
@@ -81,6 +81,8 @@
     <script src="scripts/game.js"></script>
     <script src="scripts/player.js"></script>
     <script src="scripts/utils.js"></script>
+    <script src="scripts/ground.js"></script>
+    <script src="scripts/clouds.js"></script>
 <!--
     <script src="scripts/floor.js"></script>
 -->
