--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
-    <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.mp3" type="audio/mp3" autoplay></audio>
-    <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.ogg" type="audio/ogg" autoplay></audio>
+    <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.mp3" type="audio/mp3"></audio>
+    <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.ogg" type="audio/ogg"></audio>
     <audio class="sfx" id="sfx_die" src="sounds/sfx_die.ogg" type="audio/ogg"></audio>
     <audio class="sfx" id="sfx_die" src="sounds/sfx_die.mp3" type="audio/mp3"></audio>
     <audio class="sfx" id="sfx_hit" src="sounds/sfx_hit.ogg" type="audio/ogg"></audio>
@@ -44,9 +44,7 @@
             <img src="/images/birdwing.png" class="Player--wings"></img>
         </div>
         <div class="Clouds"></div>
-        <!--
-        <div class="Pipes"></div>
-        -->
+        <span class="Game-Score"></span>
         <div class="Pipedown1 Pipe"></div>
         <div class="Pipeup1 Pipe"></div>
         <div class="Pipedown2 Pipe"></div>
