--- a/app/index.html
+++ b/app/index.html
@@ -20,17 +20,16 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-
-    <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.mp3" type="audio/mp3"></audio>
-    <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.ogg" type="audio/ogg"></audio>
+    <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.ogg" type="audio/ogg" loop></audio>
+    <!-- <audio class="sfx" id="theme_music" src="sounds/Yoshis_Woolly_World_-_Welcome_to_Yoshi.mp3" type="audio/mp3"></audio>-->
     <audio class="sfx" id="sfx_die" src="sounds/sfx_die.ogg" type="audio/ogg"></audio>
-    <audio class="sfx" id="sfx_die" src="sounds/sfx_die.mp3" type="audio/mp3"></audio>
+    <!-- <audio class="sfx" id="sfx_die" src="sounds/sfx_die.mp3" type="audio/mp3"></audio>-->
     <audio class="sfx" id="sfx_hit" src="sounds/sfx_hit.ogg" type="audio/ogg"></audio>
-    <audio class="sfx" id="sfx_hit" src="sounds/sfx_hit.mp3" type="audio/mp3"></audio>
+    <!-- <audio class="sfx" id="sfx_hit" src="sounds/sfx_hit.mp3" type="audio/mp3"></audio>-->
     <audio class="sfx" id="sfx_point" src="sounds/sfx_point.ogg" type="audio/ogg"></audio>
-    <audio class="sfx" id="sfx_point" src="sounds/sfx_point.mp3" type="audio/mp3"></audio>
+    <!-- <audio class="sfx" id="sfx_point" src="sounds/sfx_point.mp3" type="audio/mp3"></audio>-->
     <audio class="sfx" id="sfx_wing" src="sounds/sfx_wing.ogg" type="audio/ogg"></audio>
-    <audio class="sfx" id="sfx_wing" src="sounds/sfx_wing.mp3" type="audio/mp3"></audio>
+    <!-- <audio class="sfx" id="sfx_wing" src="sounds/sfx_wing.mp3" type="audio/mp3"></audio> -->
 
 </head>
 
@@ -86,6 +85,6 @@
     <script src="scripts/clouds.js"></script>
     <script src="scripts/pipe.js"></script>
     <!-- endbuild -->
-</body>
+    </body>
 
 </html>
