player rotation with wings

--- a/app/index.html
+++ b/app/index.html
@@ -43,9 +43,12 @@
         <div class="City"></div>
         <div class="Clouds"></div>
         <div class="Player">
-            <img src="/images/bird2.png" class="Player--bird"></img>
-            <img src="/images/birdwing3.png" class="Player--wings"></img>
-        </div>
+            <div class="Player--bird">
+              <img src="/images/birdwing5.png" class="Player--wings"></img>
+            </div>
+<!--            <img src="/images/bird2.png" class="Player--bird"></img>
+            <img src="/images/birdwing5.png" class="Player--wings"></img>
+  -->      </div>
         <span class="Game-Score noselect"></span>
         <div class="Pipedown1 Pipe"></div>
         <div class="Pipeup1 Pipe"></div>
