--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>FlapplyRemake</title>
+    <title>Nerdy bird</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
