Wing flap on jump

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
         <div class="Clouds"></div>
         <div class="Player">
             <div class="Player--bird">
-              <img src="/images/birdwing5.png" class="Player--wings"></img>
+              <img src="/images/birdwing5.png" class="Player--wings noselect"></img>
             </div>
 <!--            <img src="/images/bird2.png" class="Player--bird"></img>
             <img src="/images/birdwing5.png" class="Player--wings"></img>
