removing unneccecery junk

--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
             <span class="Start-restart noselect"><img class="Start-intro noselect" src="images/intro.png"></img></span>
         </div>
         <div class="Ground"></div>
-        <div class="sound noselect"><img width="50px" onclick="window.Game.prototype.toggleSound()" src="images/sound.png" alt="" /></div>
+        <div class="sound noselect" id="sound"><img width="50px" onclick="window.Game.prototype.toggleSound()" src="images/sound.png" alt="" /></div>
         <div class="nosound noselect" hidden><img width="50px" onclick="window.Game.prototype.toggleSound()" src="images/nosound.png" alt="" /></div>
     </div>
     <div class="Controls">
